force-app/main/default/objects/New_Students__c/New_Students__c.object-meta.xml
<CustomObject>
    <description>New Students</description>
    <label>New Students</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New_Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>