force-app/main/default/objects/New_Students__c/fields/Curso_a__c.field-meta.xml
<CustomField>
    <fullName>Curso_a__c</fullName>
    <label>Curso a</label>
    <length>255</length>
    <type>Text</type>
</CustomField>