force-app/main/default/objects/New_Students__c/fields/Curso_b__c.field-meta.xml
<CustomField>
    <fullName>Curso_b__c</fullName>
    <label>Curso b</label>
    <length>255</length>
    <type>Text</type>
</CustomField>