force-app/main/default/objects/New_Students__c/fields/Iglesia__c.field-meta.xml
<CustomField>
    <fullName>Iglesia__c</fullName>
    <label>Iglesia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>