force-app/main/default/objects/New_Students__c/fields/Ministerio__c.field-meta.xml
<CustomField>
    <fullName>Ministerio__c</fullName>
    <label>Ministerio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>