force-app/main/default/objects/New_Students__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apellido__c</columns>
    <columns>Correo__c</columns>
    <columns>Curso_a__c</columns>
    <columns>Curso_b__c</columns>
    <columns>Iglesia__c</columns>
    <columns>Ministerio__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>